changed 7 day rate card name

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1124,7 +1124,7 @@ cards:
 
 ##############################################################################################################################
 
-  - heading: 7-day cases by specimen date
+  - heading: Seven-day case rates by specimen date
     cardType: chart
     fullWidth: true
     abstract: >
