--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -483,7 +483,7 @@ cards:
     tabs:
       - heading: Daily
         tabType: chart
-        barType: overlay
+        barType: stack
         fields:
           - label: Number of cases 60+
             << : *specimenDateDemographics60Plus
