--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -524,6 +524,7 @@ cards:
           - label: New cases by specimen date age demographics
             value: newCasesBySpecimenDateAgeDemographics
             amplitude: rollingRate
+            parameter: age
             metrics:
             - label: 0 to 4
               value: "04_09"
