--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1383,12 +1383,11 @@ cards:
        
       - heading: Rolling rate
         tabType: chart
-        barType: stack
         fields:
           - label: Number of cases 0 to 59
             << : *specimenDateDemographics0_59
             tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
+            type: line
             colour: 0
             rollingAverage: false
             metric: rollingRate
@@ -1396,7 +1395,7 @@ cards:
           - label: Number of cases 60+
             << : *specimenDateDemographics60Plus
             tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
+            type: line
             colour: 3
             metric: rollingRate
             rollingAverage: false
