--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1383,12 +1383,13 @@ cards:
        
       - heading: Rolling rate
         tabType: chart
-        fields:
+          fields:
           - label: Number of cases 0 to 59
             << : *specimenDateDemographics0_59
             tooltip: Daily number of new people tested positive by date the sample was taken from the person
             type: line
             colour: 0
+            fill: false
             rollingAverage: false
             metric: rollingRate
 
@@ -1397,6 +1398,7 @@ cards:
             tooltip: Daily number of new people tested positive by date the sample was taken from the person
             type: line
             colour: 3
+            fill: false
             metric: rollingRate
             rollingAverage: false
           
