adds experimental label to the heatmap

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -313,6 +313,7 @@ cards:
 
   - heading: Cases by specimen date age demographics [experimental]
     cardType: chart
+    experimental: true
     locationAware:
       excluded:
         areaType:
