--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -670,3 +670,64 @@ cards:
         tabType: metadata
         filename: cardMetadata/testing/cardLFDTesting.md
 
+##############################################################################################################################
+
+# {{ StartDevOnlyBlock }}
+
+# not shown for UK (has separate radio button card)
+
+  - heading: PCR testing positivity
+    cardType: chart
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      The percentage of people who received a PCR test in the previous 7 days who had at least one positive COVID-19 PCR 
+      test result, by specimen date. Individuals tested positive more than once are only counted once, on the date of their first
+      positive test.
+
+    download:
+      - uniqueCasePositivityBySpecimenDateRollingSum
+      - uniquePeopleTestedBySpecimenDateRollingSum
+
+    tabs:
+      - heading: 7-day periods
+        tabType: chart
+        barType: overlay
+        fields:
+          - label: 7-day positivity (%)
+            value: uniqueCasePositivityBySpecimenDateRollingSum
+            tooltip: 7-day positivity by specimen date
+            type: line
+            colour: 3
+            fill: false
+            rollingAverage:
+              window: 7
+              clipEnd: 3 #no of days to exclude for incomplete data
+
+      - heading: Data
+        tabType: table
+        fields:
+          - label: 7-day period ending
+            value: date
+            type: date
+            tooltip: Date the sample was taken from the person
+
+          - label: PCR postivity (%)
+            value: uniqueCasePositivityBySpecimenDateRollingSum
+            type: numeric
+            tooltip: 7-day positivity by specimen date
+
+          - label: People tested (PCR)  
+            value: uniquePeopleTestedBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Number of people who received a PCR test in the period
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/cases/cardCasesTimeSeries.md
+
+# {{ EndDevOnlyBlock }}
